# coldbrew

./: .gitignore  .src  .travis.yml  .unsrc  .vimrc  CMakeLists.txt  README.md
src/: main.c
src/Commands/: Install.c  Install.h  uninstall.c  uninstall.h
src/build_parser/brew/: brew_parser.py  example.rb
src/build_parser/coldbrew/: scriptHandler.c  scriptHandler.h
src/build_parser/package/: package.h  pkginfo.c  pkginfo.h  srcinfo.c  srcinfo.h
src/commandLine/: CommandLineParser.c  CommandlineParser.h  options.h
src/hashMap/: HashMapStringInt.c  HashMapStringInt.h  hash.c  hash.h  hash_map_string_int.c  hash_map_string_int.h
src/utils/: compression.c  compression.h  fileIO.c  fileIO.h  http.c  http.h  print.c  print.h  stringManip.c  stringManip.h  stringMinip.c  stringMinip.h  temporaryFiles.c  temporaryFiles.h
src/utils/IO/: compression.h  fileIO.c  fileIO.h  http.c  http.h  print.c
testpkg/: .PKGINFO  .SRCINFO
